--- a/src/html/includes/questions-form-block.html
+++ b/src/html/includes/questions-form-block.html
@@ -1,4 +1,4 @@
-<section class="product__questions-form questions-form-block questions-form-block--wide">
+<section class="questions-form-block questions-form-block--wide">
   <div class="questions-form-block__inner">
     <div class="questions-form-block__info">
       <div class="questions-form-block__title">
