--- a/src/html/views/404.html
+++ b/src/html/views/404.html
@@ -17,7 +17,7 @@ title: "Заголовок | Проект",
       <ul>
         <li>Если вы перешли по ссылке с другого сайта — возможно, страница удалена;</li>
         <li>Если набирали URL самостоятельно — возможно, вы опечатались;</li>
-        <li>Если вы считаете, что страницы не существует по нашей вине — пожалуйста, отправьте нам эту ссылку по адресу example@gmail.com.</li>
+        <li>Если вы считаете, что страницы не существует по нашей вине — пожалуйста, отправьте нам эту ссылку по адресу <a href="mailto:info@in-meb.ru">info@in-meb.ru</a>.</li>
       </ul>
       <a href=""
          class="page-404__btn btn btn--clear btn--fill btn--green">Вернуться на главную</a>
