--- a/src/html/views/materials.html
+++ b/src/html/views/materials.html
@@ -65,6 +65,99 @@ title: "Заголовок | Проект",
     <div class="materials__content">
       <h1 class="page-content__title">Варианты цветов</h1>
       <div class="materials-block">
+        <div class="materials-block__title">Варианты патины узора</div>
+        <div class="materials-block__inner">
+          <div class="materials-block__item item-material">
+            <a href="" data-fancybox="" class="item-material__image">
+              <img src="uploads/materials/1.jpg"
+                   alt="">
+            </a>
+            <div class="item-material__title">Цвет не выбран</div>
+            <div class="item-material__price">Без доплаты</div>
+          </div>
+          <div class="materials-block__item item-material">
+            <a href="" data-fancybox="" class="item-material__image">
+              <img src="uploads/materials/2.jpg"
+                   alt="">
+            </a>
+            <div class="item-material__title">Прозрачный лак</div>
+            <div class="item-material__price">+20%</div>
+          </div>
+          <div class="materials-block__item item-material">
+            <a href="" data-fancybox="" class="item-material__image">
+              <img src="uploads/materials/3.jpg"
+                   alt="">
+            </a>
+            <div class="item-material__title">Классический орех-1</div>
+            <div class="item-material__price">Без доплаты</div>
+          </div>
+          <div class="materials-block__item item-material">
+            <a href="" data-fancybox="" class="item-material__image">
+              <img src="uploads/materials/4.jpg"
+                   alt="">
+            </a>
+            <div class="item-material__title">Классический орех-2</div>
+            <div class="item-material__price">+1 500 руб.</div>
+          </div>
+          <div class="materials-block__item item-material">
+            <a href="" data-fancybox="" class="item-material__image">
+              <img src="uploads/materials/5.jpg"
+                   alt="">
+            </a>
+            <div class="item-material__title">Классический орех-3</div>
+            <div class="item-material__price">Без доплаты</div>
+          </div>
+        </div>
+
+      </div>
+      <div class="materials-block">
+        <div class="materials-block__title">Варианты патины узора</div>
+        <div class="materials-block__inner">
+          <div class="materials-block__item item-material">
+            <a href="" data-fancybox="" class="item-material__image">
+              <img src="uploads/materials/1.jpg"
+                   alt="">
+            </a>
+            <div class="item-material__title">Цвет не выбран</div>
+            <div class="item-material__price">Без доплаты</div>
+          </div>
+          <div class="materials-block__item item-material">
+            <a href="" data-fancybox="" class="item-material__image">
+              <img src="uploads/materials/2.jpg"
+                   alt="">
+            </a>
+            <div class="item-material__title">Прозрачный лак</div>
+            <div class="item-material__price">+20%</div>
+          </div>
+          <div class="materials-block__item item-material">
+            <a href="" data-fancybox="" class="item-material__image">
+              <img src="uploads/materials/3.jpg"
+                   alt="">
+            </a>
+            <div class="item-material__title">Классический орех-1</div>
+            <div class="item-material__price">Без доплаты</div>
+          </div>
+          <div class="materials-block__item item-material">
+            <a href="" data-fancybox="" class="item-material__image">
+              <img src="uploads/materials/4.jpg"
+                   alt="">
+            </a>
+            <div class="item-material__title">Классический орех-2</div>
+            <div class="item-material__price">+1 500 руб.</div>
+          </div>
+          <div class="materials-block__item item-material">
+            <a href="" data-fancybox="" class="item-material__image">
+              <img src="uploads/materials/5.jpg"
+                   alt="">
+            </a>
+            <div class="item-material__title">Классический орех-3</div>
+            <div class="item-material__price">Без доплаты</div>
+          </div>
+        </div>
+
+      </div>
+      <div class="materials-block">
+        <div class="materials-block__title">Варианты патины узора</div>
         <div class="materials-block__inner">
           <div class="materials-block__item item-material">
             <a href="" data-fancybox="" class="item-material__image">
