--- a/src/html/views/works.html
+++ b/src/html/views/works.html
@@ -19,7 +19,7 @@ title: "Заголовок | Проект",
           </li>
           <li class="menu-sidebar__item">
             <a href=""
-               class="menu-sidebar__link">Спальни</a>
+               class="menu-sidebar__link menu-sidebar__link--active">Спальни</a>
           </li>
           <li class="menu-sidebar__item">
             <a href=""
