--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -6,9 +6,6 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible"
         content="ie=edge">
-  <!--  сделать шрифты локальными-->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;500;600;700;800&display=swap"
-        rel="stylesheet">
   <title>Document</title>
 
 </head>
@@ -84,10 +81,6 @@
         </div>
         <div class="header__phones phones-block">
           <a href="tel:+ё74993488391"
-             class="phones-block__item">
-            <span>8 (499)</span> 348-83-91
-          </a>
-          <a href="tel:+74993488391"
              class="phones-block__item">
             <span>8 (499)</span> 348-83-91
           </a>
@@ -178,8 +171,9 @@
 
           <div class="header__big-catalog-menu-wrapper"
                data-js="big-catalog-menu">
-
             <div class="header__big-catalog-menu">
+
+              <!--1-->
               <ul class="big-catalog-menu list--clear">
                 <li class="big-catalog-menu__item">
                   <a href=""
@@ -220,6 +214,7 @@
                   </ul>
                 </li>
               </ul>
+              <!--2-->
               <ul class="big-catalog-menu list--clear">
                 <li class="big-catalog-menu__item">
                   <a href=""
@@ -229,6 +224,81 @@
                          width="20"
                          height="20">
                       <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-2"></use>
+                    </svg>
+                    ПРИХОЖИЕ
+                  </a>
+                </li>
+              </ul>
+              <!--3-->
+              <ul class="big-catalog-menu list--clear">
+                <li class="big-catalog-menu__item">
+                  <a href=""
+                     class="big-catalog-menu__link">
+
+                    <svg class="big-catalog-menu__icon"
+                         width="20"
+                         height="20">
+                      <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-3"></use>
+                    </svg>
+                    Письменные столы
+                  </a>
+                </li>
+              </ul>
+              <!--4-->
+              <ul class="big-catalog-menu list--clear">
+                <li class="big-catalog-menu__item">
+                  <a href=""
+                     class="big-catalog-menu__link">
+
+                    <svg class="big-catalog-menu__icon"
+                         width="20"
+                         height="20">
+                      <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-4"></use>
+                    </svg>
+                    Обеденные столы
+                  </a>
+                </li>
+              </ul>
+              <!--5-->
+              <ul class="big-catalog-menu list--clear">
+                <li class="big-catalog-menu__item">
+                  <a href=""
+                     class="big-catalog-menu__link">
+
+                    <svg class="big-catalog-menu__icon"
+                         width="20"
+                         height="20">
+                      <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-5"></use>
+                    </svg>
+                    стулья
+                  </a>
+                </li>
+              </ul>
+              <!--6-->
+              <ul class="big-catalog-menu list--clear">
+                <li class="big-catalog-menu__item">
+                  <a href=""
+                     class="big-catalog-menu__link">
+
+                    <svg class="big-catalog-menu__icon"
+                         width="20"
+                         height="20">
+                      <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-6"></use>
+                    </svg>
+                    КОМПЛЕКТЫ ДЛЯ СПАЛЬНИ
+                  </a>
+                </li>
+              </ul>
+              <!--7-->
+              <ul class="big-catalog-menu list--clear">
+                <li class="big-catalog-menu__item">
+                  <a href=""
+                     class="big-catalog-menu__link">
+
+                    <svg class="big-catalog-menu__icon"
+                         width="20"
+                         height="20">
+                      <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-7"></use>
                     </svg>
                     КРОВАТИ
                   </a>
@@ -264,7 +334,7 @@
                   </ul>
                 </li>
               </ul>
-
+              <!--8-->
               <ul class="big-catalog-menu list--clear">
                 <li class="big-catalog-menu__item">
                   <a href=""
@@ -273,7 +343,40 @@
                     <svg class="big-catalog-menu__icon"
                          width="20"
                          height="20">
-                      <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-3"></use>
+                      <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-8"></use>
+                    </svg>
+                    Матрасы
+                  </a>
+                  <ul class="big-catalog-menu__sub big-catalog-sub-menu list--clear">
+                    <li class="big-catalog-sub-menu__item"><a href=""
+                                                              class="big-catalog-sub-menu__link">Эконом</a></li>
+                    <li class="big-catalog-sub-menu__item"><a href=""
+                                                              class="big-catalog-sub-menu__link">Комфорт</a></li>
+                    <li class="big-catalog-sub-menu__item"><a href=""
+                                                              class="big-catalog-sub-menu__link">Премиум</a></li>
+                    <li class="big-catalog-sub-menu__item"><a href=""
+                                                              class="big-catalog-sub-menu__link">Беспружинные матрасы</a>
+                    </li>
+                    <li class="big-catalog-sub-menu__item"><a href=""
+                                                              class="big-catalog-sub-menu__link">Наматрасники</a></li>
+                    <li class="big-catalog-sub-menu__item"><a href=""
+                                                              class="big-catalog-sub-menu__link">Основания</a></li>
+                    <li class="big-catalog-sub-menu__item"><a href=""
+                                                              class="big-catalog-sub-menu__link">Подушки</a></li>
+
+                  </ul>
+                </li>
+              </ul>
+              <!--9-->
+              <ul class="big-catalog-menu list--clear">
+                <li class="big-catalog-menu__item">
+                  <a href=""
+                     class="big-catalog-menu__link">
+
+                    <svg class="big-catalog-menu__icon"
+                         width="20"
+                         height="20">
+                      <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-9"></use>
                     </svg>
                     ШКАФЫ
                   </a>
@@ -300,7 +403,7 @@
                   </ul>
                 </li>
               </ul>
-
+              <!--10-->
               <ul class="big-catalog-menu list--clear">
                 <li class="big-catalog-menu__item">
                   <a href=""
@@ -309,22 +412,37 @@
                     <svg class="big-catalog-menu__icon"
                          width="20"
                          height="20">
-                      <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-4"></use>
+                      <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-10"></use>
                     </svg>
-                    ГОСТИНЫЕ
+                    КОМОДЫ
                   </a>
                   <ul class="big-catalog-menu__sub big-catalog-sub-menu list--clear">
-                    <li class="big-catalog-sub-menu__item"><a href=""
-                                                              class="big-catalog-sub-menu__link">Шкафы для прихожей</a>
+                    <li class="big-catalog-sub-menu__item">
+                      <a href=""
+                         class="big-catalog-sub-menu__link">Белые</a>
                     </li>
-                    <li class="big-catalog-sub-menu__item"><a href=""
-                                                              class="big-catalog-sub-menu__link">Вешалки</a></li>
-                    <li class="big-catalog-sub-menu__item"><a href=""
-                                                              class="big-catalog-sub-menu__link">Обувницы</a></li>
+                    <li class="big-catalog-sub-menu__item">
+                      <a href=""
+                         class="big-catalog-sub-menu__link">Для дачи</a>
+                    </li>
+                    <li class="big-catalog-sub-menu__item">
+                      <a href=""
+                         class="big-catalog-sub-menu__link">Из березы</a>
+                    </li>
+                    <li class="big-catalog-sub-menu__item">
+                      <a href=""
+                         class="big-catalog-sub-menu__link">Из сосны</a>
+                    </li>
+                    <li class="big-catalog-sub-menu__item">
+                      <a href=""
+                         class="big-catalog-sub-menu__link">С зеркалом</a>
+                    </li>
+
 
                   </ul>
                 </li>
               </ul>
+              <!--11-->
               <ul class="big-catalog-menu list--clear">
                 <li class="big-catalog-menu__item">
                   <a href=""
@@ -333,12 +451,27 @@
                     <svg class="big-catalog-menu__icon"
                          width="20"
                          height="20">
-                      <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-5"></use>
+                      <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-11"></use>
                     </svg>
-                    ПРИХОЖИЕ
+                    ТУМБЫ
                   </a>
+                  <ul class="big-catalog-menu__sub big-catalog-sub-menu list--clear">
+                    <li class="big-catalog-sub-menu__item">
+                      <a href=""
+                         class="big-catalog-sub-menu__link">Прикроватные</a>
+                    </li>
+                    <li class="big-catalog-sub-menu__item">
+                      <a href=""
+                         class="big-catalog-sub-menu__link">Под телевизор</a>
+                    </li>
+                    <li class="big-catalog-sub-menu__item">
+                      <a href=""
+                         class="big-catalog-sub-menu__link">Тумбы из сосны</a>
+                    </li>
+                  </ul>
                 </li>
               </ul>
+              <!--12-->
               <ul class="big-catalog-menu list--clear">
                 <li class="big-catalog-menu__item">
                   <a href=""
@@ -347,12 +480,27 @@
                     <svg class="big-catalog-menu__icon"
                          width="20"
                          height="20">
-                      <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-5"></use>
+                      <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-12"></use>
                     </svg>
-                    Письменные столы
+                    ГОСТИНЫЕ
                   </a>
+                  <ul class="big-catalog-menu__sub big-catalog-sub-menu list--clear">
+                    <li class="big-catalog-sub-menu__item">
+                      <a href=""
+                         class="big-catalog-sub-menu__link">Шкафы для прихожей</a>
+                    </li>
+                    <li class="big-catalog-sub-menu__item">
+                      <a href=""
+                         class="big-catalog-sub-menu__link">Вешалки</a>
+                    </li>
+                    <li class="big-catalog-sub-menu__item">
+                      <a href=""
+                         class="big-catalog-sub-menu__link">Обувницы</a>
+                    </li>
+                  </ul>
                 </li>
               </ul>
+              <!--13-->
               <ul class="big-catalog-menu list--clear">
                 <li class="big-catalog-menu__item">
                   <a href=""
@@ -361,55 +509,22 @@
                     <svg class="big-catalog-menu__icon"
                          width="20"
                          height="20">
-                      <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-5"></use>
+                      <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-13"></use>
                     </svg>
-                    Обеденные столы
+                    Кухонные модули
                   </a>
-                </li>
-              </ul>
-              <ul class="big-catalog-menu list--clear">
-                <li class="big-catalog-menu__item">
-                  <a href=""
-                     class="big-catalog-menu__link">
 
-                    <svg class="big-catalog-menu__icon"
-                         width="20"
-                         height="20">
-                      <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-5"></use>
-                    </svg>
-                    стулья
-                  </a>
-                </li>
-              </ul>
-              <ul class="big-catalog-menu list--clear">
-                <li class="big-catalog-menu__item">
-                  <a href=""
-                     class="big-catalog-menu__link">
-
-                    <svg class="big-catalog-menu__icon"
-                         width="20"
-                         height="20">
-                      <use xlink:href="img/spritemap.svg#sprite-big-catalog-menu-5"></use>
-                    </svg>
-                    КОМПЛЕКТЫ ДЛЯ СПАЛЬНИ
-                  </a>
                 </li>
               </ul>
 
 
             </div>
 
-
           </div>
-
-
         </nav>
       </div>
-
     </div>
-
-
   </header>
   <!--  page-content--front-page - this class only front page-->
-  <div class="page-content page-content--front-page">
+  <div class="page-content <% if (typeof(pageClasses) !== 'undefined') {%><%=pageClasses%><% } %>">
     <div class="container">
