--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -1,6 +1,6 @@
 <% var data = {
 title: "Заголовок | Проект",
-
+pageClasses: "page-content--front-page"
 }; %>
 <%= _.template(require('./../includes/header.html').default)(data) %>
 
@@ -1009,10 +1009,10 @@ title: "Заголовок | Проект",
   </section>
 
 
-  <%= _.template(require('./../includes/questions-form-block.html'). default)(data) %>
+
 
 
 </div>
 
-
+<%= _.template(require('./../includes/questions-form-block.html'). default)(data) %>
 <%= _.template(require('./../includes/footer.html').default)(data) %>
