--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -216,8 +216,8 @@ a {
     font-size   : 30px;
     font-weight : 800;
     line-height : 1.2133;
+    margin      : 30px 0 40px;
     color       : #161616;
-    margin : 30px 0 40px;
 
     // .page-content__title--about
     &--about {
@@ -225,7 +225,8 @@ a {
     }
   }
 }
-.has-sidebar{
+
+.has-sidebar {
   .page-content__title {
     margin-top : 0;
   }
@@ -251,7 +252,7 @@ a {
   // .products-slider__btn
   &__btn {
     position : absolute;
-    top      : 200px;
+    top      : 190px;
 
     // .products-slider__btn--prev
     &--prev {
@@ -266,6 +267,7 @@ a {
 }
 
 .questions-form-block {
+  margin-bottom       : -80px;
   background-color    : #00cc52;
   background-image    : url(../img/svg/questions-form.svg);
   background-repeat   : no-repeat;
@@ -316,6 +318,6 @@ a {
   }
 }
 
-.has-sidebar{
+.has-sidebar {
   display : flex;
 }
