--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -7,3 +7,49 @@
   font-display : swap;
 }
 
+
+@font-face {
+  font-family  : 'Montserrat Alternates';
+  src          : url('../fonts/MontserratAlternates/MontserratAlternates-Bold.woff2') format('woff2'),
+  url('../fonts/MontserratAlternates/MontserratAlternates-Bold.woff') format('woff');
+  font-weight  : bold;
+  font-style   : normal;
+  font-display : swap;
+}
+
+@font-face {
+  font-family  : 'Montserrat Alternates';
+  src          : url('../fonts/MontserratAlternates/MontserratAlternates-Medium.woff2') format('woff2'),
+  url('../fonts/MontserratAlternates/MontserratAlternates-Medium.woff') format('woff');
+  font-weight  : 500;
+  font-style   : normal;
+  font-display : swap;
+}
+
+@font-face {
+  font-family  : 'Montserrat Alternates';
+  src          : url('../fonts/MontserratAlternates/MontserratAlternates-ExtraBold.woff2') format('woff2'),
+  url('../fonts/MontserratAlternates/MontserratAlternates-ExtraBold.woff') format('woff');
+  font-weight  : 800;
+  font-style   : normal;
+  font-display : swap;
+}
+
+@font-face {
+  font-family  : 'Montserrat Alternates';
+  src          : url('../fonts/MontserratAlternates/MontserratAlternates-Regular.woff2') format('woff2'),
+  url('../fonts/MontserratAlternates/MontserratAlternates-Regular.woff') format('woff');
+  font-weight  : normal;
+  font-style   : normal;
+  font-display : swap;
+}
+
+@font-face {
+  font-family  : 'Montserrat Alternates';
+  src          : url('../fonts/MontserratAlternates/MontserratAlternates-SemiBold.woff2') format('woff2'),
+  url('../fonts/MontserratAlternates/MontserratAlternates-SemiBold.woff') format('woff');
+  font-weight  : 600;
+  font-style   : normal;
+  font-display : swap;
+}
+
