--- a/src/scss/includes/sidebar.scss
+++ b/src/scss/includes/sidebar.scss
@@ -69,8 +69,8 @@
 
     }
 
-    // .menu-catalog-sidebar__link.current
-    &.current,
+    // .menu-sidebar__link--active
+    &--active,
     &:active,
     &:focus,
     &:hover {
