--- a/src/scss/views/404.scss
+++ b/src/scss/views/404.scss
@@ -34,6 +34,7 @@
   // .page-404__like
   &__like {
     margin-top : 65px;
+    margin-bottom : 80px;
   }
 
   // .page-404__btn
@@ -48,6 +49,13 @@
 }
 
 .content-404 {
+  a {
+    color : inherit;
+
+    &:hover {
+      text-decoration : none;
+    }
+  }
 
   ul {
     margin              : 0;
