--- a/src/scss/views/basket.scss
+++ b/src/scss/views/basket.scss
@@ -1,19 +1,51 @@
 .page-content {
   // .page-content__basket
   &__basket {
-    margin-top : 60px;
 
-    @media screen and (max-width : 1023px) {
-      margin-top : 20px;
-    }
 
   }
 }
 
 .basket-page {
   // .basket-page__list
+  text-align : left;
+
+  // .basket-page__footer
   &__list {
+    margin-top: 60px;
   }
+
+  // .basket-page__form-title
+  &__footer {
+    margin-top : 60px;
+  }
+
+  // .basket-page__footer-inner
+  &__form-title {
+    font-size   : 24px;
+    font-weight : bold;
+    line-height : 1.2083;
+    color       : #161616;
+  }
+
+  // .basket-page__information
+  &__footer-inner {
+    display     : flex;
+    align-items : flex-start;
+    margin-top  : 40px;
+  }
+
+  // .basket-page__form
+  &__information {
+    flex        : 0 0 350px;
+    margin-left : 30px;
+  }
+
+  // .basket-page__form-title
+  &__form {
+    flex : 1 1 auto;
+  }
+
 }
 
 .basket-list {
@@ -23,53 +55,33 @@
 
   // .basket-list__item
   &__item {
-    margin-bottom : 5px;
+
   }
 
   // .basket-list__footer
   &__footer {
-    max-width   : 350px;
-    margin-top  : 25px;
-    margin-left : auto;
 
-    @media screen and (max-width : 1023px) {
-      margin : 35px auto 0;
-    }
+
   }
 
   // .basket-list__btn
   &__btn {
-    display     : block;
-    margin-top  : 30px;
-    margin-left : auto;
 
 
-    @media screen and (max-width : 1023px) {
-
-      margin-right : auto;
-    }
   }
 }
 
 
 .item-basket-list {
-  position         : relative;
-  display          : flex;
-  align-items      : center;
-  justify-content  : space-between;
-  box-sizing       : border-box;
-  padding          : 12px 32px 12px 20px;
-  border           : 1px solid rgb(196, 196, 196);
-  background-color : rgb(255, 255, 255);
+  position        : relative;
+  display         : flex;
+  align-items     : center;
+  justify-content : space-between;
+  padding         : 30px 0;
+  border-top      : 1px solid #f8f8f8;
 
-  @media screen and (max-width : 1023px) {
-    padding : 20px 25px 20px 10px;
-  }
-
-  @media screen and (max-width : 767px) {
-    align-items    : flex-start;
-    flex-direction : column;
-    padding        : 10px 10px 15px 10px;
+  &:last-child {
+    border-bottom : 1px solid #f8f8f8;
   }
 
 
@@ -81,31 +93,15 @@
     margin-right  : auto;
     padding-right : 15px;
 
-    @media screen and (max-width : 1023px) {
-      flex      : 1 1 250px;
-      min-width : 0;
-    }
-
-    @media screen and (max-width : 767px) {
-      flex-basis : 100%;
-    }
   }
 
 
   // .item-basket-list__image
   &__image {
-    flex         : 0 0 72px;
-    width        : 72px;
-    max-height   : 72px;
-    margin-right : 35px;
-
-    @media screen and (max-width : 1023px) {
-      align-self   : flex-start;
-      flex         : 0 0 60px;
-      width        : 60px;
-      height       : 60px;
-      margin-right : 20px;
-    }
+    flex         : 0 0 210px;
+    width        : 210px;
+    max-height   : 210px;
+    margin-right : 40px;
 
   }
 
@@ -117,21 +113,21 @@
 
   // .item-basket-list__name
   &__name {
-    font-size       : 15px;
-    font-weight     : bold;
 
+    font-size       : 16px;
+    font-weight     : 600;
+    line-height     : 1.25;
+    display         : block;
+    margin-bottom   : 15px;
     text-decoration : none;
-
-    @media screen and (max-width : 1023px) {
-      font-size : 14px;
-    }
+    color           : #000;
 
 
   }
 
   // .item-basket-list__props
   &__props {
-    margin-top : 3px;
+
   }
 
   // .item-basket-list__price
@@ -143,9 +139,7 @@
     white-space : nowrap;
     color       : #54585d;
 
-    @media screen and (max-width : 1023px) {
-      display : none;
-    }
+
   }
 
   // .item-basket-list__price-total
@@ -158,12 +152,6 @@
     color       : #54585d;
 
 
-    @media screen and (max-width : 1023px) {
-
-    }
-    @media screen and (max-width : 767px) {
-      margin : 20px 0 0 80px;
-    }
   }
 
   // .item-basket-list__footer
@@ -172,15 +160,7 @@
     margin-left  : auto;
     padding-left : 15px;
 
-    @media screen and (max-width : 1023px) {
 
-    }
-
-    @media screen and (max-width : 767px) {
-      position : absolute;
-      right    : 15px;
-      bottom   : 15px;
-    }
   }
 
   // .item-basket-list__delete
@@ -193,13 +173,7 @@
     margin  : 0 auto;
     padding : 0 15px;
 
-    @media screen and (max-width : 1023px) {
 
-    }
-
-    @media screen and (max-width : 767px) {
-      margin : 20px 0 0 80px;
-    }
   }
 
 }
@@ -207,17 +181,16 @@
 .item-basket-list:first-child {
 
   @mixin basket-table-headers {
-    font-size   : 13px;
+
     font-weight : normal;
     font-style  : normal;
-    line-height : 16px;
     position    : absolute;
-    top         : -25px;
+    top         : -35px;
     display     : block;
-    color       : #54585d;
-    @media screen and (max-width : 1023px) {
-      display : none;
-    }
+    font-size   : 14px;
+    line-height : 1.2142;
+    color       : #9d9d9d;
+
   }
 
 
@@ -270,21 +243,24 @@
 .props-item-basket-list {
   // .props-item-basket-list__item
   &__item {
+    margin-bottom : 6px;
   }
 }
 
 .prop-item-basket-list {
-  font-size   : 13px;
-  line-height : 16px;
-  display     : inline-block;
-  color       : rgb(84, 88, 93);
+  font-size   : 14px;
+  line-height : 1.2142;
+  display     : block;
+
 
   // .prop-item-basket-list__name
   &__name {
+    color : #9d9d9d;
   }
 
   // .prop-item-basket-list__value
   &__value {
+    color : #161616;
   }
 }
 
@@ -295,14 +271,14 @@
 }
 
 .qnt-block {
-  display: flex;
-  align-items: center;
-  max-width: 72px;
-  box-sizing: border-box;
-  border: 2px solid #d9d9d9;
-  border-radius: 3px;
-  width: 100%;
-  padding: 4px 10px;
+  display       : flex;
+  align-items   : center;
+  box-sizing    : border-box;
+  width         : 100%;
+  max-width     : 72px;
+  padding       : 4px 10px;
+  border        : 2px solid #d9d9d9;
+  border-radius : 3px;
 
 
   // .qnt-block__btn
@@ -310,8 +286,8 @@
 
     display         : flex;
     align-items     : center;
+    flex            : 0 0 auto;
     justify-content : center;
-    flex : 0 0 auto;
 
     // .qnt-block__btn--minus
     &--minus {
