--- a/src/html/views/contacts.html
+++ b/src/html/views/contacts.html
@@ -16,7 +16,8 @@ title: "Заголовок | Проект",
                 src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af5e6c2d0656fb993ec3ba7777c73439a4bb9624ce2de331050af651a0c6b1323&amp;width=100%25&amp;height=500&amp;lang=ru_RU&amp;scroll=true"></script>
       </div>
       <div class="map-block__information contacts-information">
-        <a href="tel:+79991234567" class="contacts-information__item">
+        <a href="tel:+79991234567"
+           class="contacts-information__item">
           <svg width="24"
                height="24">
             <use xlink:href="img/spritemap.svg#sprite-contacts-information-icon-1"></use>
@@ -90,23 +91,24 @@ title: "Заголовок | Проект",
                     <div class="form__field item-field item-field--captcha">
                       google recaptcha
                     </div>
+
+                    <div class="form__actions form__actions--left">
+                      <input type="submit"
+                             value="Отправить"
+                             class="form__action btn btn--fill btn--green">
+                    </div>
                     <div class="form__field item-field item-field--agree">
                       <label class="item-field__label item-field__label--checkbox">
                         <input type="checkbox"
                                checked
                                class="item-field__field item-field__field--checkbox">
-                        <span class="item-field__title item-field__title--checkbox">
-                  Я согласен на обработку
-                <a target="_blank"
-                   rel="noopener noreferrer"
-                   href="">персональных данных</a>
-                </span>
+                        <span></span>
+                        Я согласен на обработку
+                        <a target="_blank"
+                           rel="noopener noreferrer"
+                           href="">персональных данных</a>
+
                       </label>
-                    </div>
-                    <div class="form__actions form__actions--left">
-                      <input type="submit"
-                             value="Отправить"
-                             class="form__action btn btn--fill btn--green">
                     </div>
 
 
