--- a/src/html/views/catalog.html
+++ b/src/html/views/catalog.html
@@ -19,11 +19,13 @@ title: "Заголовок | Проект",
           <li class="menu-sidebar__item">
             <a href=""
                class="menu-sidebar__link current">Спальные комплекты
+            </a>
+            <button class="menu-sidebar__btn" data-js-catalog-menu-btn>
               <svg width="9"
                    height="11">
                 <use xlink:href="img/spritemap.svg#sprite-sorting-down"></use>
               </svg>
-            </a>
+            </button>
 
             <ul class="menu-catalog-sidebar__submenu  submenu-catalog-sidebar list--clear">
               <li class="submenu-catalog-sidebar__item">
@@ -154,7 +156,8 @@ title: "Заголовок | Проект",
     <div class="catalog__content">
       <div class="catalog__tag-filter-block tag-filter-block">
         <div class="tag-filter-block__title">Часто ищут:</div>
-        <div class="tag-filter-block__item">Из массива</div>
+        <a href=""
+           class="tag-filter-block__item">Из массива</a>
         <a href=""
            class="tag-filter-block__item">140x200</a>
         <a href=""
