--- a/src/scss/includes/header.scss
+++ b/src/scss/includes/header.scss
@@ -20,6 +20,11 @@
       position       : relative;
       padding-top    : 15px;
       padding-bottom : 15px;
+
+      @media screen and (max-width : 1139px) {
+        padding-top    : 21px;
+        padding-bottom : 21px;
+      }
     }
 
     // .header__container--bottom
@@ -33,17 +38,29 @@
   &__row {
     // .header__row--top
     &--top {
-
       background-color : #f8f8f8;
+
+      @media screen and (max-width : 1139px) {
+        display : none;
+      }
     }
 
     // .header__row--middle
     &--middle {
+      position : relative;
+
+      @media screen and (max-width : 1139px) {
+        margin-bottom : 56px;
+      }
     }
 
     // .header__row--bottom
     &--bottom {
       background-color : #00cc52;
+
+      @media screen and (max-width : 1139px) {
+        display : none;
+      }
 
     }
   }
@@ -64,10 +81,24 @@
   // .header__search
   &__search {
     flex : 0 1 358px;
+    position : relative;
+
+    @media screen and (max-width : 1139px) {
+      position: absolute;
+      bottom: -56px;
+      left: 0;
+      right: 0;
+      background-color: #00CC52;
+      flex: 1 1 100%;
+      padding: 8px 40px;
+    }
   }
 
   // .header__phones
   &__phones {
+    @media screen and (max-width : 1139px) {
+      margin-left : auto;
+    }
   }
 
   // .header__personal-block
@@ -119,23 +150,39 @@
 
 .logo {
   text-decoration : none;
+
+  @media screen and (max-width : 1139px) {
+    display : flex;
+    align-items : center;
+  }
+
   // .logo__image
   &__image {
+    @media screen and (max-width : 1139px) {
+      max-width : 167px;
+    }
   }
 
   // .logo__text
   &__text {
-    font-family    : $mainFontFamily;
+    font-family    : 'Lato', sans-serif;
     font-size      : 13px;
     letter-spacing : -0.01em;
     opacity        : 0.7;
     color          : #454545;
 
+    @media screen and (max-width : 1139px) {
+      max-width : 126px;
+      display : block;
+      margin-left : 10px;
+      line-height: 13px;
+    }
+
   }
 }
 
 .search-block {
-  position : relative;
+
 
   // .search-block__form
   &__form {
@@ -145,11 +192,11 @@
   &__field {
     font-size        : 14px;
     font-weight      : 600;
+    width            : 100%;
     padding          : 14px 25px 15px;
     color            : #9d9d9d;
     border-radius    : 30px;
     background-color : #f8f8f8;
-    width : 100%;
 
 
   }
@@ -159,6 +206,13 @@
     position : absolute;
     top      : 12px;
     right    : 14px;
+
+    @media screen and (max-width : 1139px) {
+      top : 50%;
+      margin-top : -12px;
+      right : 59px;
+    }
+
   }
 
   // .search-block__image
@@ -344,12 +398,11 @@
 }
 
 .header__big-catalog-menu {
-  max-width             : $contentWidth;
-  margin                : 0 auto;
-  padding               : 50px 0;
-  column-count: 4;
-  column-gap: 60px;
-
+  max-width    : $contentWidth;
+  margin       : 0 auto;
+  padding      : 50px 0;
+  column-count : 4;
+  column-gap   : 60px;
 
 
 }
@@ -364,7 +417,7 @@
 
   // .big-catalog-menu__item
   &__item {
-    display: inline-block;
+    display : inline-block;
   }
 
   // .big-catalog-menu__link
@@ -391,7 +444,7 @@
 
   // .big-catalog-menu__icon
   &__icon {
-    fill: #fff;
+    fill : #fff;
   }
 
   // .big-catalog-menu__sub
