--- a/src/scss/views/basket.scss
+++ b/src/scss/views/basket.scss
@@ -12,7 +12,7 @@
 
   // .basket-page__footer
   &__list {
-    margin-top: 60px;
+    margin-top : 60px;
   }
 
   // .basket-page__form-title
@@ -30,9 +30,7 @@
 
   // .basket-page__information
   &__footer-inner {
-    display     : flex;
-    align-items : flex-start;
-    margin-top  : 40px;
+    margin-top : 40px;
   }
 
   // .basket-page__form
@@ -51,6 +49,14 @@
 .basket-list {
   // .basket-list__inner
   &__inner {
+  }
+
+  // .basket-list__total
+  &__total {
+    font-size   : 30px;
+    font-weight : 700;
+    margin      : 15px 0;
+    text-align  : right;
   }
 
   // .basket-list__item
