--- a/src/scss/views/index.scss
+++ b/src/scss/views/index.scss
@@ -34,9 +34,10 @@
 
   // .main-page__works
   &__works {
-    width       : 100vw;
-    margin-top  : 45px;
-    margin-left : calc((100vw - #{$contentWidth}) / -2);
+    width         : 100vw;
+    margin-top    : 45px;
+    margin-bottom : -80px;
+    margin-left   : calc((100vw - #{$contentWidth}) / -2);
   }
 
   // .main-page__banner
@@ -389,7 +390,7 @@
 
   // .main-slider__btn
   &__btn {
-    top : 50%;
+    top        : 50%;
     margin-top : -18px;
     // .main-slider__btn--prev
     &--prev {
@@ -486,8 +487,12 @@
 
   // .item-product-review__image
   &__image {
-    max-width    : 150px;
-    margin-right : 20px;
+    display         : flex;
+    align-items     : center;
+    justify-content : center;
+    max-width       : 150px;
+    height          : 120px;
+    margin-right    : 20px;
   }
 
   // .item-product-review__add
@@ -533,8 +538,6 @@
 }
 
 
-
-
 .questions-form {
 
   // .questions-form__inner
@@ -568,6 +571,12 @@
 
   // .questions-form__agree
   &__agree {
+    color : #fff;
+
+    a {
+      color : inherit;
+    }
+
 
   }
 
@@ -584,3 +593,4 @@
     color : #9d9d9d;
   }
 }
+
