--- a/src/scss/views/product.scss
+++ b/src/scss/views/product.scss
@@ -160,7 +160,9 @@
 
   // .info-product__header
   &__header {
-    display : flex;
+    display     : flex;
+    align-items : flex-start;
+
 
   }
 
@@ -168,12 +170,26 @@
   &__add-to-favorite {
     flex-shrink : 0;
     margin-left : 15px;
+
+    > svg {
+      fill : #f8f8f8
+    }
+
+    // .info-product__add-to-favorite--active
+    &--active {
+      > svg {
+        fill : #00cc52
+      }
+    }
+
+
   }
 
   // .info-product__title
   &__title {
     font-size   : 24px;
     line-height : 1.2083;
+    margin      : 0;
   }
 
   // .info-product__props
@@ -186,6 +202,7 @@
 
   // .info-product__prices
   &__prices {
+    margin-top : 20px;
   }
 
   // .info-product__actions
@@ -681,15 +698,15 @@
 
   // .cheap-exp-block__tab
   &__tab {
-    font-size     : 24px;
-    font-weight   : 600;
-    line-height   : 1.2083;
-    text-align    : center;
-    color         : #161616;
-    border-bottom : 3px solid #d8d8d8;
-    width : 50%;
+    font-size      : 24px;
+    font-weight    : 600;
+    line-height    : 1.2083;
+    width          : 50%;
     padding-bottom : 10px;
-    cursor : pointer;
+    cursor         : pointer;
+    text-align     : center;
+    color          : #161616;
+    border-bottom  : 3px solid #d8d8d8;
 
 
     // .cheap-exp-block__tab.active
