--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -128,11 +128,11 @@
             </li>
             <li class="catalog-menu__item">
               <a href="catalog.html"
-                 class="catalog-menu__link">Гостинные</a>
+                 class="catalog-menu__link ">Гостинные</a>
             </li>
             <li class="catalog-menu__item">
               <a href="catalog.html"
-                 class="catalog-menu__link">Прихожие</a>
+                 class="catalog-menu__link catalog-menu__link--active">Прихожие</a>
             </li>
             <li class="catalog-menu__item">
               <a href="catalog.html"
