--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -446,6 +446,216 @@ pageClasses: "page-content--front-page"
               </footer>
             </div>
           </div>
+          <div class="swiper-slide products-slider__slide">
+            <div class="item-product ">
+              <div class="item-product__stickers stickers">
+                <div class="stickers__item item-sticker item-sticker--new">NEW</div>
+              </div>
+              <a href=""
+                 class="item-product__image">
+                <img src="uploads/products/1.png "
+                     alt="">
+              </a>
+              <a href=""
+                 class="item-product__title">Кровать двуспальная Лондон</a>
+              <div class="item-product__prices">
+                <div class="item-product__price item-product__price--old">20 368 ₽</div>
+                <div class="item-product__price"><span>от</span> 10 368 ₽</div>
+              </div>
+              <div class="item-product__actions">
+                <button type="button"
+                        class="btn btn--fill btn--green item-product__add">
+                  <svg width="18"
+                       height="18">
+                    <use xlink:href="img/spritemap.svg#sprite-button-basket"></use>
+                  </svg>
+                  В корзину
+                </button>
+              </div>
+              <footer class="item-product__material-prices material-prices">
+                <div class="material-prices__row">
+                  <div class="material-prices__col material-prices__col--header">Материал</div>
+                  <div class="material-prices__col material-prices__col--header">Цена</div>
+                </div>
+                <div class="material-prices__row">
+                  <div class="material-prices__col">
+                    <img src="img/catalog/wood-icon-1.png"
+                         alt=""
+                         class="material-prices__icon">
+                    Сосна
+                  </div>
+                  <div class="material-prices__col">10 368 ₽</div>
+                </div>
+                <div class="material-prices__row">
+                  <div class="material-prices__col">
+                    <img src="img/catalog/wood-icon-2.png"
+                         alt=""
+                         class="material-prices__icon">
+                    Берёза
+                  </div>
+                  <div class="material-prices__col">15 368 ₽</div>
+                </div>
+                <div class="material-prices__row">
+                  <div class="material-prices__col">
+                    <img src="img/catalog/wood-icon-3.png"
+                         alt=""
+                         class="material-prices__icon">
+                    Бук
+                  </div>
+                  <div class="material-prices__col">20 368 ₽</div>
+                </div>
+                <div class="material-prices__row">
+                  <div class="material-prices__col">
+                    <img src="img/catalog/wood-icon-4.png"
+                         alt=""
+                         class="material-prices__icon">
+                    Дуб
+                  </div>
+                  <div class="material-prices__col">25 368 ₽</div>
+                </div>
+              </footer>
+            </div>
+          </div>
+          <div class="swiper-slide products-slider__slide">
+            <div class="item-product ">
+              <div class="item-product__stickers stickers">
+                <div class="stickers__item item-sticker item-sticker--new">NEW</div>
+              </div>
+              <a href=""
+                 class="item-product__image">
+                <img src="uploads/products/1.png "
+                     alt="">
+              </a>
+              <a href=""
+                 class="item-product__title">Кровать двуспальная Лондон</a>
+              <div class="item-product__prices">
+                <div class="item-product__price item-product__price--old">20 368 ₽</div>
+                <div class="item-product__price"><span>от</span> 10 368 ₽</div>
+              </div>
+              <div class="item-product__actions">
+                <button type="button"
+                        class="btn btn--fill btn--green item-product__add">
+                  <svg width="18"
+                       height="18">
+                    <use xlink:href="img/spritemap.svg#sprite-button-basket"></use>
+                  </svg>
+                  В корзину
+                </button>
+              </div>
+              <footer class="item-product__material-prices material-prices">
+                <div class="material-prices__row">
+                  <div class="material-prices__col material-prices__col--header">Материал</div>
+                  <div class="material-prices__col material-prices__col--header">Цена</div>
+                </div>
+                <div class="material-prices__row">
+                  <div class="material-prices__col">
+                    <img src="img/catalog/wood-icon-1.png"
+                         alt=""
+                         class="material-prices__icon">
+                    Сосна
+                  </div>
+                  <div class="material-prices__col">10 368 ₽</div>
+                </div>
+                <div class="material-prices__row">
+                  <div class="material-prices__col">
+                    <img src="img/catalog/wood-icon-2.png"
+                         alt=""
+                         class="material-prices__icon">
+                    Берёза
+                  </div>
+                  <div class="material-prices__col">15 368 ₽</div>
+                </div>
+                <div class="material-prices__row">
+                  <div class="material-prices__col">
+                    <img src="img/catalog/wood-icon-3.png"
+                         alt=""
+                         class="material-prices__icon">
+                    Бук
+                  </div>
+                  <div class="material-prices__col">20 368 ₽</div>
+                </div>
+                <div class="material-prices__row">
+                  <div class="material-prices__col">
+                    <img src="img/catalog/wood-icon-4.png"
+                         alt=""
+                         class="material-prices__icon">
+                    Дуб
+                  </div>
+                  <div class="material-prices__col">25 368 ₽</div>
+                </div>
+              </footer>
+            </div>
+          </div>
+          <div class="swiper-slide products-slider__slide">
+            <div class="item-product ">
+              <div class="item-product__stickers stickers">
+                <div class="stickers__item item-sticker item-sticker--new">NEW</div>
+              </div>
+              <a href=""
+                 class="item-product__image">
+                <img src="uploads/products/1.png "
+                     alt="">
+              </a>
+              <a href=""
+                 class="item-product__title">Кровать двуспальная Лондон</a>
+              <div class="item-product__prices">
+                <div class="item-product__price item-product__price--old">20 368 ₽</div>
+                <div class="item-product__price"><span>от</span> 10 368 ₽</div>
+              </div>
+              <div class="item-product__actions">
+                <button type="button"
+                        class="btn btn--fill btn--green item-product__add">
+                  <svg width="18"
+                       height="18">
+                    <use xlink:href="img/spritemap.svg#sprite-button-basket"></use>
+                  </svg>
+                  В корзину
+                </button>
+              </div>
+              <footer class="item-product__material-prices material-prices">
+                <div class="material-prices__row">
+                  <div class="material-prices__col material-prices__col--header">Материал</div>
+                  <div class="material-prices__col material-prices__col--header">Цена</div>
+                </div>
+                <div class="material-prices__row">
+                  <div class="material-prices__col">
+                    <img src="img/catalog/wood-icon-1.png"
+                         alt=""
+                         class="material-prices__icon">
+                    Сосна
+                  </div>
+                  <div class="material-prices__col">10 368 ₽</div>
+                </div>
+                <div class="material-prices__row">
+                  <div class="material-prices__col">
+                    <img src="img/catalog/wood-icon-2.png"
+                         alt=""
+                         class="material-prices__icon">
+                    Берёза
+                  </div>
+                  <div class="material-prices__col">15 368 ₽</div>
+                </div>
+                <div class="material-prices__row">
+                  <div class="material-prices__col">
+                    <img src="img/catalog/wood-icon-3.png"
+                         alt=""
+                         class="material-prices__icon">
+                    Бук
+                  </div>
+                  <div class="material-prices__col">20 368 ₽</div>
+                </div>
+                <div class="material-prices__row">
+                  <div class="material-prices__col">
+                    <img src="img/catalog/wood-icon-4.png"
+                         alt=""
+                         class="material-prices__icon">
+                    Дуб
+                  </div>
+                  <div class="material-prices__col">25 368 ₽</div>
+                </div>
+              </footer>
+            </div>
+          </div>
         </div>
       </div>
       <div class="swiper-button-prev products-slider__btn products-slider__btn--prev"></div>
