--- a/src/scss/views/index.scss
+++ b/src/scss/views/index.scss
@@ -76,6 +76,10 @@
     grid-template-columns : repeat(4, 1fr);
     gap                   : 24px;
     grid-auto-flow        : dense;
+
+    @media screen and (max-width : 1139px) {
+      grid-template-columns : repeat(3, 1fr);
+    }
   }
 
   // .collections-block__item
@@ -93,6 +97,11 @@
     &:nth-child(3) {
       grid-column : 4 / 5;
       grid-row    : 1 / 2;
+
+      @media screen and (max-width : 1139px) {
+        grid-column : 3 / 4;
+        grid-row    : 2 / 3;
+      }
     }
   }
 
@@ -147,6 +156,11 @@
     border-radius    : 0 3px 3px 0;
     background-color : rgba(0, 204, 82, 0.9);
 
+    @media screen and (max-width : 1139px) {
+      font-size   : 18px;
+      line-height : 1.2222;
+    }
+
 
     // .item-collection__title--big
     &--big {
@@ -159,6 +173,12 @@
   // .item-collection__image
   &__image {
     transition : transform 0.3s;
+    height : 100%;
+
+    > img {
+      width : 100%;
+      height : 100%;
+    }
 
     &:hover {
       transform : scale(1.1)
