--- a/src/html/views/catalog.html
+++ b/src/html/views/catalog.html
@@ -7,10 +7,28 @@ title: "Заголовок | Проект",
 
 <h1 class="page-content__title">Спальные комплекты</h1>
 <div class="catalog">
-  <div class="catalog__banner">
-    <img src="../../uploads/catalog/banner.jpg"
-         alt="">
+  <div class="catalog__banner banner-slider">
+    <div class="swiper-container banner-slider__container">
+      <div class="swiper-wrapper banner-slider__wrapper">
+        <div class="swiper-slide banner-slider__slide">
+          <img src="uploads/main-page/1.png"
+               alt="">
+        </div>
+        <div class="swiper-slide banner-slider__slide">
+          <img src="uploads/main-page/1.png"
+               alt="">
+        </div>
+        <div class="swiper-slide banner-slider__slide">
+          <img src="uploads/main-page/1.png"
+               alt="">
+        </div>
+      </div>
+      <div class="swiper-button-prev banner-slider__btn banner-slider__btn--prev"></div>
+      <div class="swiper-button-next banner-slider__btn banner-slider__btn--next"></div>
+    </div>
+    <div class="swiper-pagination banner-slider___pagination"></div>
   </div>
+
   <div class="catalog__inner">
     <aside class="catalog__sidebar sidebar">
       <div class="sidebar__block">
