--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,6 +27,8 @@
 @import 'views/works';
 @import 'views/404';
 @import 'views/order-confirm';
+@import 'views/search';
+@import 'views/favorite';
 
 
 
